2024-01-18T00:31:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7563574341 # 33
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 303 643 / 311 655
* notice: next accum: outdated-unq outdated-all / unq all: 303 643 / 312 656
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-17]

2024-01-12T16:08:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7504583392 # 17
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 303 643 / 310 654
* notice: next accum: outdated-unq outdated-all / unq all: 303 643 / 311 655
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-01-12]

2024-01-12T08:08:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7499503802 # 16
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 303 643 / 309 653
* notice: next accum: outdated-unq outdated-all / unq all: 303 643 / 310 654
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-12]

2024-01-12T00:32:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7496260276 # 15