@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-18T00:31:54Z",
+  "timestamp" : "2024-01-18T08:08:55Z",
   "count_outdated" : 643,
   "uniques_outdated" : 303,
-  "count" : 656,
-  "uniques" : 312,
+  "count" : 657,
+  "uniques" : 313,
   "clones" : [
     {
       "timestamp": "2024-01-07T00:00:00Z",
@@ -61,6 +61,15 @@
     },
     {
       "timestamp": "2024-01-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
