@@ -1,3 +1,12 @@
+2024-01-18T08:08:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7567053832 # 34
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
+* notice: last 14d: unq all: 3 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 303 643 / 312 656
+* notice: next accum: outdated-unq outdated-all / unq all: 303 643 / 313 657
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-18]
+
 2024-01-18T00:31:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7563574341 # 33
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
